k8s/app-manifest/j26-reports/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-reports
  template:
    metadata:
      labels:
        app: j26-reports
    spec:
      containers:
        - name: j26-reports-app
          image: ghcr.io/scouterna/j26-reports:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-reports-kv-csi
