k8s/app-manifest/j26-reports/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-reports
spec:
  selector:
    app: j26-reports
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
